--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/react": "^2.3.10",
         "@tailwindcss/forms": "^0.5.11",
+        "lucide-react": "^0.562.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3"
     }
