--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@tailwindcss/forms": "^0.5.11",
         "lucide-react": "^0.562.0",
         "react": "^19.2.3",
-        "react-dom": "^19.2.3"
+        "react-dom": "^19.2.3",
+        "react-hot-toast": "^2.6.0"
     }
 }
