--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/react": "^2.3.10",
         "@tailwindcss/forms": "^0.5.11",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.562.0",
         "react": "^19.2.3",
+        "react-datepicker": "^9.1.0",
         "react-dom": "^19.2.3",
-        "react-hot-toast": "^2.6.0"
+        "react-hot-toast": "^2.6.0",
+        "react-select": "^5.10.2"
     }
 }
